# TP-GL

./: README.md  SpecificationDocUML.docx
Application/: .gitignore  CMakeLists.txt  Makefile
Application/include/main/: Terminal.h
Application/include/main/Sensor/: Attribute.h
Application/include/main/Services/: UserService.h
Application/include/main/Users/: Cleaner.h
Application/include/main/sensors/: Attribute.h  Measurement.h  Sensor.h
Application/include/main/services/: CleanerService.h  SensorService.h  UserService.h  loadService.h
Application/include/main/user/: Cleaner.h  GovernmentUser.h  IndividualUser.h  ProviderUser.h  User.h
Application/include/main/utils/: utils.h
Application/include/performances/: AlgosSpeedTest.h
Application/include/tests/: CleanerServices_test.h  LoadService_test.h  SensorService_test.h  UserService_test.h  test_ServiceSensor.h
Application/res/dataset/: government.csv  passwords.csv
Application/res/test/: measurements_test.csv  sensors_test.csv
Application/src/main/: Terminal.cpp  Terminal.h  main.cpp
Application/src/main/sensors/: Attribute.cpp  Measurement.cpp
Application/src/main/services/: CleanerService.cpp  LoadService.cpp  SensorService.cpp  UserService.cpp
Application/src/main/user/: User.cpp
Application/src/main/utils/: utils.cpp
Application/src/performances/: main_performances.cpp
Application/src/performances/services/: AlgosSpeedTest.cpp
Application/src/tests/: main_tests.cpp  test_SensorService.cpp
Application/src/tests/services/: CleanerServices_test.cpp  LoadService_test.cpp  SensorService_test.cpp  UserService_test.cpp
Documentation/: ClassDiagram.mdj  DesignDocument.docx  IntroDocUML.docx  SequenceDiagrams.mdj  SpecificationDocUML.docx  UseCaseDiagram.mdj  pseudocode.md  tests.docx
Documentation/Algorithms/: AlgoFR5.md  AlgoFR7.md  AlgoFR8.md  (+1 more)
(+4 files in other folders)
